# fornixdb

./: .gitattributes  .gitignore  BENEFITS.md  CHANGELOG.md  INTEGRATION.md  LICENSE  README.md  ROADMAP.md  SENSES.md  fornix-config  fornix-config.cmd  pyproject.toml
examples/: agent_shim.py  assoc_threshold_sweep.py  dream_eval.py  feel_demo.py  markdown_bridge_demo.py  scale_recall_test.py  vector_tradeoff_report.py
examples/sample_docs/: homelab_notes.md
fornixdb/: __init__.py  answer_eval.py  benefit.py  billed.py  budget.py  cadence.py  cli.py  consolidate.py  context.py  core.py  db.py  doctor.py  evals.py  feelloop.py  field.py  field_stats.py  floor_stats.py  levels.py  markdown_benefit.py  markdown_stale.py  multistore.py  proactive.py  prospective.py  recaption.py  reproject.py  salience.py  senses.py  suppress.py  tiers.py  timeparse.py  tokens.py  usefulness_scan.py  value.py  vector_tradeoff.py  vectors.py  watchloop.py  wizard.py
fornixdb/adapters/: __init__.py  claude_code_cadence.py  claude_code_recall.py  claude_code_session_end.py  claude_code_transcripts.py  mac_audio.py  mac_camera.py  mac_proprioception.py  mac_vision.py  markdown_doc.py  markdown_export.py  markdown_import.py  mcp_server.py  (+1 more)
tests/: __init__.py  test_adapters.py  test_answer_eval.py  test_autolink.py  test_benefit.py  test_billed.py  test_budget.py  test_cadence.py  test_candidates.py  test_claude_code_cadence.py  test_cli_output.py  test_concurrency.py  test_config_integrity.py  test_consolidate.py  test_context_scoping.py  test_core.py  test_cross_pulse_dedup.py  test_decay.py  test_doctor.py  test_embedder_injection.py  test_evals.py  test_feedback.py  test_feelloop.py  test_field.py  test_floor_stats.py  test_hardening.py  test_index_gaps.py  test_levels.py  test_mac_watch.py  test_markdown_benefit.py  test_markdown_export.py  test_markdown_stale.py  test_mcp_server.py  test_multistore.py  test_native_memory.py  test_proactive_recall.py  test_prospective.py  test_recall_cluster.py  test_recaption.py  test_registry_and_default_store.py  (+17 more)
(+4 files in other folders)
