[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fornixdb"
version = "0.1.0"
description = "A persistent, human-like memory for any AI - local, private, model-agnostic"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# the core is stdlib-only by design; vectors are an optional upgrade
dependencies = []

[project.optional-dependencies]
vectors = ["model2vec"]

[project.scripts]
fornixdb = "fornixdb.cli:main"
fornixdb-mcp = "fornixdb.adapters.mcp_server:main"

[tool.setuptools.packages.find]
include = ["fornixdb*"]
