[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fornixdb"
version = "0.7.1"
description = "A persistent, human-like memory for any AI - local, private, model-agnostic"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Keyword + time recall is stdlib-only at runtime. model2vec ships by default
# so semantic recall is on out of the box, but it is UNPINNED on purpose: pip
# accepts any already-installed version and never overrides/downgrades a
# model2vec another project is using. If it is missing or too old to import,
# get_default_embedder() falls back to keyword-only — vectors never break a run.
dependencies = ["model2vec"]

[project.optional-dependencies]
# kept for back-compat with `pip install fornixdb[vectors]`; now a no-op since
# model2vec is a default dependency.
vectors = ["model2vec"]
# the watch() vision loop's Mac adapters (fornixdb.adapters.mac_camera /
# mac_vision). All imported LAZILY inside the adapters — the core and the full
# test suite stay stdlib-only, so this is only needed to run live capture.
mac = ["opencv-python", "pillow", "mlx", "huggingface-hub", "numpy"]

[project.scripts]
fornixdb = "fornixdb.cli:main"
fornixdb-mcp = "fornixdb.adapters.mcp_server:main"

[tool.setuptools.packages.find]
include = ["fornixdb*"]
